--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <ul>
         <li><a href="#tab-1">Pestaña 1</a></li>
         <li><a href="#tab-2">Pestaña 2</a></li>
-        <li><a href="#tab-3">Pestaña 22222</a></li>
+        <li><a href="#tab-3">Pestaña 15645645</a></li>
         <li><a href="#tab-4">Pestaña 4</a></li>
         <li><a href="#tab-5">Pestaña 5</a></li>
         <li><a href="#tab-6">Pestaña 6</a></li>
