--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="#tab-1">Pestaña 1</a></li>
         <li><a href="#tab-2">Pestaña 2</a></li>
         <li><a href="#tab-3">Pestaña 3</a></li>
-        <li><a href="#tab-4">Pestaña 4</a></li>
+        <li><a href="#tab-4">Pestaña sdfsdfdfs</a></li>
         <li><a href="#tab-5">Pestaña 5</a></li>
         <li><a href="#tab-6">Pestaña 6</a></li>
         <li><a href="#tab-7">Pestaña 7</a></li>
