--- a/tab3.html
+++ b/tab3.html
@@ -10,6 +10,7 @@
   <body>
     <div class="tab3">
       <h1>Pestaña 3</h1>
+      <h1>cambio en pestaña 3</h1>
       <hr>
       <div>
         ...
